src/objects/Ewarehouse_Harvest_Crop__c.object
<CustomObject>
    <fields>
        <fullName>Beans_Accepted__c</fullName>
        <label>Beans Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beans_Harvested__c</fullName>
        <label>Beans Harvested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Beans_Moisture_Content__c</fullName>
        <label>Beans Moisture Content</label>
        <picklist>
            <picklistValues>
                <fullName>15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 15%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Beans_Rejected__c</fullName>
        <label>Beans Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Black_Beans_Accepted__c</fullName>
        <label>Black Beans Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Black_Beans_Harvested__c</fullName>
        <label>Black Beans Harvested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Black_Beans_Moisture_Content__c</fullName>
        <label>Black Beans Moisture Content</label>
        <picklist>
            <picklistValues>
                <fullName>15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 15%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Black_Beans_Rejected__c</fullName>
        <label>Black Beans Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cow_Peas_Accepted__c</fullName>
        <label>Cow Peas Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cow_Peas_Harvested__c</fullName>
        <label>Cow Peas Harvested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cow_Peas_Moisture_Content__c</fullName>
        <label>Cow Peas Moisture Content</label>
        <picklist>
            <picklistValues>
                <fullName>15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 15%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cow_Peas_Rejected__c</fullName>
        <label>Cow Peas Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop__c</fullName>
        <label>Crop</label>
        <picklist>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cow peas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black beans(Dolichos)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pigeon peas</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Harvest__c</fullName>
        <label>Ewarehouse Harvest</label>
        <referenceTo>Ewarehouse_Harvest__c</referenceTo>
        <relationshipLabel>Ewwarehouse Harvest Crops</relationshipLabel>
        <relationshipName>Ewwarehouse_Harvest_Crops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Green_Grams_Accepted__c</fullName>
        <label>Green  Grams Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Grams_Harvested__c</fullName>
        <label>Green Grams Harvested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Green_Grams_Moisture_Content__c</fullName>
        <label>Green Grams Moisture Content</label>
        <picklist>
            <picklistValues>
                <fullName>15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 15%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Green_Grams_Rejected__c</fullName>
        <label>Green Grams Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maize_Accepted__c</fullName>
        <label>Maize Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maize_Harvested__c</fullName>
        <label>Maize Harvested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maize_Moisture_Content__c</fullName>
        <label>Maize Moisture Content</label>
        <picklist>
            <picklistValues>
                <fullName>13.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than 13.5%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maize_Rejected__c</fullName>
        <label>Maize Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pigeon_Peas_Accepted__c</fullName>
        <label>Pigeon Peas Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pigeon_Peas_Harvested__c</fullName>
        <label>Pigeon Peas Harvested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pigeon_Peas_Moisture_Content__c</fullName>
        <label>Pigeon Peas Moisture Content</label>
        <picklist>
            <picklistValues>
                <fullName>15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less Than 15%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pigeon_Peas_Rejected__c</fullName>
        <label>Pigeon Peas Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ewarehouse Harvest Crop</label>
    <nameField>
        <label>Ewarehouse Harvest Crop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ewwarehouse Harvest Crops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>